# xdg-app-gtk

./: .gitignore  Makefile.am  configure.ac  xdg-app-gtk-impl-wayland.c  xdg-app-gtk-impl-wayland.h  xdg-app-gtk-impl-x11.c  xdg-app-gtk-impl-x11.h  xdg-app-gtk-impl.c  xdg-app-gtk-impl.h  xdg-app-gtk-imported-wayland.c  xdg-app-gtk-imported-wayland.h  xdg-app-gtk-imported-x11.c  xdg-app-gtk-imported-x11.h  xdg-app-gtk-imported.c  xdg-app-gtk-imported.h  xdg-app-gtk-importer.c  xdg-app-gtk-importer.h  xdg-app-gtk-wayland.c  xdg-app-gtk-wayland.h  xdg-app-gtk-x11.c  xdg-app-gtk-x11.h  xdg-app-gtk.c  xdg-app-gtk.h
